working on product accordio and buy button with quantity selector

--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -1168,6 +1168,7 @@
         },
         "buy_buttons": {
           "name": "Buy buttons",
+          "name_1": "Buy buttons with quantity",
           "show_payment_button": "Show dynamic checkout button",
           "show_payment_button_info": "Each customer will see their preferred payment method from those available on your store, such as PayPal or Apple Pay. [Learn more](https:\/\/help.shopify.com\/manual\/using-themes\/change-the-layout\/dynamic-checkout)",
           "show_gift_card_recipient": "Show recipient information form for gift cards",
