--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,4 +1,11 @@
 {
+  "404": {
+    "general": {
+      "title": "404",
+      "continue_shopping": "متابعة التسوق",
+      "not_found_info": "تعذَّر علينا العثور على الصفحة التي كنت تبحث عنها. يُرجى استخدام التنقل أو الزر أدناه للعودة إلى موقعنا."
+    }
+  },
   "general": {
     "page": "الصفحة {{ page }}",
     "home": "الصفحة الرئيسية",
@@ -373,13 +380,6 @@
       "error": "حدث خطأ واحد أو أكثر في أثناء استرداد أسعار الشحن:"
     }
   },
-  "404": {
-    "general": {
-      "title": "404",
-      "continue_shopping": "متابعة التسوق",
-      "not_found_info": "تعذَّر علينا العثور على الصفحة التي كنت تبحث عنها. يُرجى استخدام التنقل أو الزر أدناه للعودة إلى موقعنا."
-    }
-  },
   "search": {
     "general": {
       "title": "البحث",
@@ -463,6 +463,51 @@
     "shop_the_look": {
       "view_products": "عرض المنتجات",
       "view_product": "عرض المنتج"
+    }
+  },
+  "pagefly": {
+    "products": {
+      "product": {
+        "regular_price": "Regular price",
+        "sold_out": "Sold out",
+        "unavailable": "Unavailable",
+        "on_sale": "Sale",
+        "quantity": "Quantity",
+        "add_to_cart": "Add to cart",
+        "back_to_collection": "Back to {{ title }}",
+        "view_details": "View details"
+      }
+    },
+    "article": {
+      "tags": "Tags:",
+      "all_topics": "All topics",
+      "by_author": "by {{ author }}",
+      "posted_in": "Posted in",
+      "read_more": "Read more",
+      "back_to_blog": "Back to {{ title }}"
+    },
+    "comments": {
+      "title": "Leave a comment",
+      "name": "Name",
+      "email": "Email",
+      "message": "Message",
+      "post": "Post comment",
+      "moderated": "Please note, comments must be approved before they are published",
+      "success_moderated": "Your comment was posted successfully. We will publish it in a little while, as our blog is moderated.",
+      "success": "Your comment was posted successfully! Thank you!",
+      "comments_with_count": {
+        "one": "{{ count }} comment",
+        "other": "{{ count }} comments"
+      }
+    },
+    "password_page": {
+      "login_form_message": "Enter store using password:",
+      "login_form_password_label": "Password",
+      "login_form_password_placeholder": "Your password",
+      "login_form_submit": "Enter",
+      "signup_form_email_label": "Email",
+      "signup_form_success": "We will send you an email right before we open!",
+      "password_link": "Enter using password"
     }
   }
 }
