--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -1,4 +1,11 @@
 {
+  "404": {
+    "general": {
+      "title": "404",
+      "continue_shopping": "继续购物",
+      "not_found_info": "我们找不到您正在寻找的页面。请使用下面的导航或按钮返回我们的网站。"
+    }
+  },
   "general": {
     "page": "第 {{ page }} 页",
     "home": "首页",
@@ -367,13 +374,6 @@
       "error": "检索运费时出现一个或多个错误："
     }
   },
-  "404": {
-    "general": {
-      "title": "404",
-      "continue_shopping": "继续购物",
-      "not_found_info": "我们找不到您正在寻找的页面。请使用下面的导航或按钮返回我们的网站。"
-    }
-  },
   "search": {
     "general": {
       "title": "搜索",
@@ -453,6 +453,51 @@
     "shop_the_look": {
       "view_products": "查看商品",
       "view_product": "查看商品"
+    }
+  },
+  "pagefly": {
+    "products": {
+      "product": {
+        "regular_price": "Regular price",
+        "sold_out": "Sold out",
+        "unavailable": "Unavailable",
+        "on_sale": "Sale",
+        "quantity": "Quantity",
+        "add_to_cart": "Add to cart",
+        "back_to_collection": "Back to {{ title }}",
+        "view_details": "View details"
+      }
+    },
+    "article": {
+      "tags": "Tags:",
+      "all_topics": "All topics",
+      "by_author": "by {{ author }}",
+      "posted_in": "Posted in",
+      "read_more": "Read more",
+      "back_to_blog": "Back to {{ title }}"
+    },
+    "comments": {
+      "title": "Leave a comment",
+      "name": "Name",
+      "email": "Email",
+      "message": "Message",
+      "post": "Post comment",
+      "moderated": "Please note, comments must be approved before they are published",
+      "success_moderated": "Your comment was posted successfully. We will publish it in a little while, as our blog is moderated.",
+      "success": "Your comment was posted successfully! Thank you!",
+      "comments_with_count": {
+        "one": "{{ count }} comment",
+        "other": "{{ count }} comments"
+      }
+    },
+    "password_page": {
+      "login_form_message": "Enter store using password:",
+      "login_form_password_label": "Password",
+      "login_form_password_placeholder": "Your password",
+      "login_form_submit": "Enter",
+      "signup_form_email_label": "Email",
+      "signup_form_success": "We will send you an email right before we open!",
+      "password_link": "Enter using password"
     }
   }
 }
