--- a/locales/lv.json
+++ b/locales/lv.json
@@ -1,3 +1,12 @@
+/*
+ * ------------------------------------------------------------
+ * IMPORTANT: The contents of this file are auto-generated.
+ *
+ * This file may be updated by the Shopify admin language editor
+ * or related systems. Please exercise caution as any changes
+ * made to this file may be overwritten.
+ * ------------------------------------------------------------
+ */
 {
   "404": {
     "general": {
@@ -105,7 +114,7 @@
       "view_in_space": "View in your space",
       "taxes_included": "Ieskaitot nodokļus.",
       "taxes_excluded": "Neieskaitot nodokļus.",
-      "shipping_policy_html": "<a href=\"{{ link }}\" class=\"link\">Piegādes izmaksas tiek aprēķinātas<\/a> pirms apmaksas",
+      "shipping_policy_html": "<a href=\"{{ link }}\" class=\"link\">Piegādes izmaksas tiek aprēķinātas</a> pirms apmaksas",
       "size_chart": "Izmēru tabula",
       "available_colors_count": {
         "one": "Pieejama {{ count }} krāsa",
@@ -353,9 +362,9 @@
       "view_cart": "Skatīt grozu",
       "checkout": "Noformēt pasūtījumu",
       "we_accept": "Mēs pieņemam",
-      "taxes_and_shipping_policy_at_checkout_html": "Nodokļi un <a href=\"{{ link }}\" class=\"link\">piegādes izmaksas tiek aprēķinātas<\/a> pirms apmaksas",
+      "taxes_and_shipping_policy_at_checkout_html": "Nodokļi un <a href=\"{{ link }}\" class=\"link\">piegādes izmaksas tiek aprēķinātas</a> pirms apmaksas",
       "taxes_included_but_shipping_at_checkout": "Nodokļi ir iekļauti, un piegādes izmaksas tiks aprēķinātas pirms apmaksas",
-      "taxes_included_and_shipping_policy_html": "Nodokļi iekļauti. <a href=\"{{ link }}\" class=\"link\">Piegādes izmaksas<\/a> tiek aprēķinātas pirms apmaksas.",
+      "taxes_included_and_shipping_policy_html": "Nodokļi iekļauti. <a href=\"{{ link }}\" class=\"link\">Piegādes izmaksas</a> tiek aprēķinātas pirms apmaksas.",
       "taxes_and_shipping_at_checkout": "Nodokļi un piegādes izmaksas tiks aprēķinātas pirms apmaksas"
     },
     "order": {
@@ -446,7 +455,7 @@
   },
   "sections": {
     "before_after": {
-      "not_enough_blocks": "Lai parādītu salīdzinājumu “pirms\/pēc”, iekļaujiet sadaļā vairāk bloku.",
+      "not_enough_blocks": "Lai parādītu salīdzinājumu “pirms/pēc”, iekļaujiet sadaļā vairāk bloku.",
       "percentage_shown": "Parādāmā “pēc” attēla daļa procentos"
     },
     "countdown_timer": {
