--- a/locales/sv.json
+++ b/locales/sv.json
@@ -1,3 +1,12 @@
+/*
+ * ------------------------------------------------------------
+ * IMPORTANT: The contents of this file are auto-generated.
+ *
+ * This file may be updated by the Shopify admin language editor
+ * or related systems. Please exercise caution as any changes
+ * made to this file may be overwritten.
+ * ------------------------------------------------------------
+ */
 {
   "404": {
     "general": {
@@ -105,7 +114,7 @@
       "view_in_space": "Visa i ditt utrymme",
       "taxes_included": "Inkl. moms.",
       "taxes_excluded": "Exkl. moms.",
-      "shipping_policy_html": "<a href=\"{{ link }}\" class=\"link\">Frakt<\/a> beräknas i kassan",
+      "shipping_policy_html": "<a href=\"{{ link }}\" class=\"link\">Frakt</a> beräknas i kassan",
       "size_chart": "Jämför storlekar",
       "available_colors_count": {
         "one": "{{ count }} färg tillgänglig",
@@ -341,9 +350,9 @@
       "weight": "Vikt",
       "subtotal": "Delsumma",
       "total": "Totalt",
-      "taxes_and_shipping_policy_at_checkout_html": "Moms och <a href=\"{{ link }}\" class=\"link\">frakt<\/a> beräknas i kassan",
+      "taxes_and_shipping_policy_at_checkout_html": "Moms och <a href=\"{{ link }}\" class=\"link\">frakt</a> beräknas i kassan",
       "taxes_included_but_shipping_at_checkout": "Moms ingår och frakt beräknas i kassan",
-      "taxes_included_and_shipping_policy_html": "Moms ingår. <a href=\"{{ link }}\" class=\"link\">Frakt<\/a> beräknas i kassan.",
+      "taxes_included_and_shipping_policy_html": "Moms ingår. <a href=\"{{ link }}\" class=\"link\">Frakt</a> beräknas i kassan.",
       "taxes_and_shipping_at_checkout": "Moms och frakt beräknas i kassan",
       "add_order_note": "Lägg till orderkommentar",
       "edit_order_note": "Redigera ditt orderkommentar",
@@ -441,7 +450,7 @@
   },
   "sections": {
     "before_after": {
-      "not_enough_blocks": "För att visa före\/efter jämförelse, lägg till fler block i sektionen.",
+      "not_enough_blocks": "För att visa före/efter jämförelse, lägg till fler block i sektionen.",
       "percentage_shown": "Procentandel efter det visade fotot"
     },
     "countdown_timer": {
